fix alignments

--- a/components/category/style.css
+++ b/components/category/style.css
@@ -12,7 +12,7 @@
   height: 22px;
   left: 0;
   line-height: 22px;
-  padding: 0 15px;
+  padding: 0 10px;
   position: -webkit-sticky;
   position: sticky;
   right: 0;
