--- a/components/titlebar/style.css
+++ b/components/titlebar/style.css
@@ -8,7 +8,7 @@
   height: var(--titlebar-height);
   justify-content: center;
   overflow: hidden;
-  padding: 0 8px;
+  padding: 0 10px;
   position: fixed;
   width: 100%;
   z-index: 1;
@@ -29,7 +29,7 @@
   display: flex;
   font-size: 14px;
   font-weight: 600;
-  left: 8px;
-  padding: 4px 8px;
+  left: 10px;
+  padding: 4px 10px;
   position: fixed;
 }
